--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@ nav .container .logo {
   width: fit-content;
 }
 
+nav .container .bars {
+  display: none;
+}
+
 nav .container svg {
   z-index: 5;
   display: none;
@@ -109,6 +113,9 @@ nav .container ul {
     text-align: left;
     display: block;
     width: 100%;
+  }
+  nav .container .bars {
+    display: block;
   }
   nav .container svg {
     display: block;
