--- a/css/main.css
+++ b/css/main.css
@@ -345,15 +345,67 @@ nav .container ul li a:hover {
 }
 
 .courses .container .items {
+  scroll-behavior: smooth;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 20px;
+  width: 100%;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 12px);
+  gap: 13px;
+  overflow: hidden;
+}
+
+.buttons {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+#next {
+  cursor: pointer;
+  user-select: none;
+  background-color: #02cc7c;
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+#pre {
+  cursor: pointer;
+  user-select: none;
+  background-color: #02cc7c;
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+@media (max-width: 800px) {
+  .courses .container .items {
+    grid-auto-columns: calc((100% / 2) - 12px);
+  }
+}
+
+@media (max-width: 550px) {
+  .courses .container .items {
+    grid-auto-columns: calc((100% / 1) - 12px);
+  }
 }
 
 .courses .container .items .item {
   padding: 10px;
   text-align: center;
   border-radius: 5px;
+  user-select: none;
   background-color: var(--second-color);
 }
 
